non-msrv-tests/tests/ui/item_option_syntax.stderr
error: unexpected option syntax
 --> tests/ui/item_option_syntax.rs:2:16
  |
2 | #[derive_where(Debug = "option"; T)]
  |                ^^^^^^^^^^^^^^^^
